--- a/config/app.json
+++ b/config/app.json
@@ -1,1 +1,8 @@
-{}
+{
+    "app": {
+        "host": "0.0.0.0",
+        "port": 10080,
+        "passward": "admin",
+        "monitoring": false
+    }
+}
